# gnome-photos

./: .gitlab-ci.yml  .gitmodules  ARTISTS  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  generate-authors.sh  glib-tap.mk  gnome-photos.doap  meson.build  meson_options.txt  meson_post_install.py  update-authors.sh
.gitlab/merge_request_templates/: default.md
data/: Adwaita.css  Makefile.am  application.css  create-miner-symlinks.sh  gnome-photos-search-provider.ini  gnome-photos.appdata.xml.in  gnome-photos.desktop.in.in  meson.build  org.gnome.Photos.Tracker1.Miner.Extract.service.in  org.gnome.Photos.Tracker1.Miner.Files.service.in  org.gnome.Photos.Tracker1.service.in  org.gnome.Photos.Tracker3.Miner.Extract.service.in  org.gnome.Photos.Tracker3.Miner.Files.service.in  org.gnome.Photos.appdata.xml.in  org.gnome.Photos.desktop.in.in  org.gnome.Photos.domain.rule.in  org.gnome.Photos.rule.in  org.gnome.Photos.search-provider.ini  org.gnome.Photos.service.in  org.gnome.photos.gschema.xml  org.gnome.photos.gschema.xml.in
data/icons/: Makefile.am  meson.build
flatpak/: libraw-CVE-2017-13735-radc_divbyzero.patch  org.gnome.Photos.json
help/: LINGUAS  Makefile.am  meson.build
help/C/: addphotos.page  createanalbum.page  deleteanalbum.page  favorites-set.page  favorites.page  img-delete.page.stub  imgprops.page  index.page  printing.page  selectionmode.page  set-background.page.stub  setupfavourites.page  view-album.page  view-favorites.page  view-photos.page  view.page  viewingphoto.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/fur/: fur.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/ko/: ko.po
help/nl/: nl.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
manuals/: gnome-photos.xml  meson.build
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  an.po  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  (+32 more)
src/: Makefile.am  egg-animation.c  eog-debug.c  eog-debug.h  eog-enums.h  eog-exif-util.c  eog-exif-util.h  eog-image-private.h  eog-image-save-info.c  eog-image.c  eog-image.h  eog-job-queue.c  eog-job-queue.h  eog-jobs.c  eog-jobs.h  eog-metadata-reader-jpg.c  eog-metadata-reader-jpg.h  eog-metadata-reader-png.c  eog-metadata-reader-png.h  eog-metadata-reader.c  eog-metadata-reader.h  eog-print-image-setup.c  eog-print-image-setup.h  eog-print-preview.c  eog-print-preview.h  eog-print.c  eog-print.h  eog-transform.h  eog-uri-converter.c  eog-util.c  eog-util.h  gd-main-toolbar.c  gd-main-toolbar.h  gd-main-view-generic.c  gd-main-view-generic.h  gd-main-view.c  gegl-gtk-enums.h  gegl-gtk-view-helper.c  gegl-gtk-view-helper.h  gegl-gtk-view.c  (+394 more)
src/queries/: .swo  .swp  all.sparql.template  collections.sparql.template  favorite-photos.sparql.template  photos.sparql.template
subprojects/rawspeed/: config.h.in  meson.build  meson_options.txt
subprojects/rawspeed/data/: meson.build
subprojects/rawspeed/src/: meson.build
subprojects/rawspeed/src/librawspeed/: meson.build
subprojects/rawspeed/src/librawspeed/common/: meson.build
subprojects/rawspeed/src/librawspeed/decoders/: meson.build
subprojects/rawspeed/src/librawspeed/decompressors/: meson.build
subprojects/rawspeed/src/librawspeed/interpolators/: meson.build
subprojects/rawspeed/src/librawspeed/io/: meson.build
subprojects/rawspeed/src/librawspeed/metadata/: meson.build
subprojects/rawspeed/src/librawspeed/parsers/: meson.build
subprojects/rawspeed/src/librawspeed/tiff/: meson.build
tests/: Makefile.am  basic.py  meson.build  template.test.in  test-session.conf.in  testutil.py
tests/unit/: Makefile.am  meson.build  photos-test-gegl-buffer.c  photos-test-gegl.c  photos-test-pipeline-edited-00.xml  photos-test-pipeline-edited-insta-filter-1977.xml  photos-test-pipeline-edited-insta-filter-brannan.xml  photos-test-pipeline-edited-insta-filter-clarendon.xml  photos-test-pipeline-edited-insta-filter-gotham.xml  photos-test-pipeline-edited-insta-filter-hefe.xml  photos-test-pipeline-edited-insta-filter-nashville.xml  photos-test-pipeline-edited-insta-filter-none.xml  photos-test-pipeline-edited-magic-filter-1947.xml  photos-test-pipeline-edited-magic-filter-caap.xml  photos-test-pipeline-edited-magic-filter-calistoga.xml  photos-test-pipeline-edited-magic-filter-hometown.xml  photos-test-pipeline-edited-magic-filter-mogadishu.xml  photos-test-pipeline-edited-magic-filter-none.xml  photos-test-pipeline-edited-magic-filter-trencin.xml  photos-test-pipeline-not-edited-00.xml  photos-test-pipeline.c  photos-test-tracker-queries.c
