@YELP_HELP_RULES@

HELP_ID = gnome-photos

HELP_FILES = \
        favorites.page \
        favorites-set.page \
        index.page \
        legal.xml \
        view-album.page \
        view-favorites.page \
        view.page

HELP_MEDIA = \
	media/logo1.png

HELP_LINGUAS = de el es hu pt_BR

-include $(top_srcdir)/git.mk
