@YELP_HELP_RULES@

HELP_ID = gnome-photos

HELP_FILES = \
        favorites.page \
        favorites-set.page \
        index.page \
        legal.xml \
        view-album.page \
        view-favorites.page \
        view-photos.page \
		view.page

HELP_MEDIA = \
	media/logo1.png

HELP_LINGUAS = cs de el es fr gl hu ko pt_BR ro

-include $(top_srcdir)/git.mk
