@YELP_HELP_RULES@

HELP_ID = gnome-photos

HELP_FILES = \
        favorites.page \
        favorites-set.page \
        index.page \
        legal.xml \
        view-album.page \
        view-favorites.page \
        view-photos.page \
		view.page

HELP_MEDIA = \
	media/logo1.png

HELP_LINGUAS = ca cs da de el es fr gl hu ko pl pt_BR ro sv

-include $(top_srcdir)/git.mk
