sources = [
  'favorites.page',
  'favorites-set.page',
  'index.page',
  'legal.xml',
  'view-album.page',
  'view-favorites.page',
  'view-photos.page',
  'view.page'
]

media = 'media/logo1.png'

linguas = [
  'ca',
  'cs',
  'da',
  'de',
  'el',
  'es',
  'fr',
  'gl',
  'hu',
  'ko',
  'pl',
  'pt_BR',
  'ro',
  'sv'
]

gnome.yelp(
  photos_name,
  sources: sources,
  media: media,
  symlink_media: true,
  languages: linguas
)
